<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="diary_app_id">11111</string>

    <string name="app_name">DiaryProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">DiaryApp</string>
    <string name="addButtonText">Add Diary</string>
    <string name="deleteButtonText">Delete Diary</string>
    <string name="showButtonText">Show Diary</string>
    <string name="clearButtonText">Clear Database</string>
    <string name="title_activity_add__diary">add_Diary</string>
    <string name="addDiaryWelcome">Add a diary</string>
    <string name="addDiary_Title">Diary title</string>
    <string name="addDiary_Date">Diary date</string>
    <string name="addDiary_Content">Diary content</string>
    <string name="add_OK">OK</string>
    <string name="hint_title">What happened today</string>
    <string name="hint_date">YYYY-MM-DD</string>
    <string name="hint_content">Details</string>
    <string name="title_activity_show__diary">Show Diary</string>
    <string name="title_activity_diary_entry">diary_entry</string>
    <string name="updateButtonText">Update Diary</string>
    <string name="title_activity_update__diary">Update Diary</string>
    <string name="updating_title"> %s </string>
    <string name="updating_date">%1$s</string>
    <string name="updating_content">%1$s</string>
    <string name="menu_music">Background Music</string>
</resources>
