<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/addDiaryWelcome"
        android:textSize="56dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/addDiary_Title"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:textStyle="italic"
        android:hint="@string/hint_title"
        android:id="@+id/Edit_Title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/addDiary_Date"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dp"
        android:inputType="date"
        android:textStyle="italic"
        android:id="@+id/Edit_Date"
        android:hint="@string/hint_date"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="Weather"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:textStyle="italic"
                android:id="@+id/Edit_weather"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="Location"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:textStyle="italic"
                android:id="@+id/Edit_location"/>
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/addDiary_Content"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_edit"
        android:inputType="text"
        android:textStyle="italic"
        android:id="@+id/Edit_Content"
        android:hint="@string/hint_content"  />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Add_Diary_OK"
        android:layout_marginLeft="20dp"
        android:text="@string/add_OK"/>


</LinearLayout><!-- From: file:/Users/wenhaowu/AndroidstudioProjects/DiaryProject/app/src/main/res/layout/activity_add__diary.xml -->